2015-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/script.scm: renamed as src/eval.scm.
	* src/eval.scm: renamed from src/script.scm.
	* src/guile.cc: renamed src/script.scm -> src/eval.scm.

2015-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/guile.cc: add file heading.
	* src/script.scm: add file heading.

2015-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/engine/eval.h: qualify as extern the functions required by
	Guile primitives.
	* src/engine/eval.cpp: qualify as extern the functions required
	by Guile primitives. Add ancilliary built-in evaluation
	functions.
	* src/guile.cc: add Guile intermediate primitives.
	* src/script.scm: evaluation based on Guile intermediate
	primitives.

2015-04-19  Antonio Ceballos  <aceballos@gmail.com>

	* src/engine/eval.cpp: add eval-guile function and eval-builtin
	primitive.
	* src/engine/eval.h: add eval-guile function and eval-builtin
	primitive.
	* src/script.scm: add eval-guile function, which calls
	eval-builtin.
	* TODO: update tasks.

2015-01-11  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/Makefile.am: compile with HAVE_GUILE.
	* src/frontend/cmd.cc: show 'GUILE enabled' with version info,
	if HAVE_GUILE is defined.

2015-01-11  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: set version 6.2.1a; --enable-guile.
	* src/Makefile.am: compile with HAVE_GUILE.
	* src/main.cc: use precompilation directive HAVE_GUILE.
	* src/guile.cc: basic GUILE functions.
	* src/script.scm: basic SCHEME script.

2015-01-11  Antonio Ceballos  <aceballos@gmail.com>

	* Merge from trunk (delta 6.2.0 -> 6.2.1).

2015-01-04  Antonio Ceballos  <aceballos@gmail.com>

	* NEWS: changes in version 6.2.1.
	* configure.ac: set version 6.2.1.
	* doc/version.texi: set version 6.2.1.
	* doc/Makefile.am: clean files.
	* man/Makefile.am: clean files.

2015-01-04  Antonio Ceballos  <aceballos@gmail.com>

	* NEWS: changes in version 6.2.0.
	* configure.ac: set version 6.2.0.